perf(web): zero-copy ResponseSink push model, string-slice RadixTrie, and constructor-injected BodyConverter
- Implement push-based ResponseSink for zero-copy Netty response writing
- Optimize RadixTrie path routing with zero-allocation String slice state machine
- Remove rawPathBytes byte array allocation overhead
- Refactor NettyServerRunner to use pure constructor injection for BodyConverter singleton